added demo2 support.